tests/k8s/gwc/pingora-gateway-01.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-web
spec:
  gatewayClassName: pingora
  listeners:
    - protocol: HTTP
      port: 80
      name: prod-web-gw
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-web
spec:
  parentRefs:
    - name: test-web
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: nginx
          port: 80
